Renaming with your datas

--- a/NightmareMode/NightmareMode.csproj
+++ b/NightmareMode/NightmareMode.csproj
@@ -23,7 +23,7 @@
     <None Include="Assets\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="WinchModTemplate.csproj.user" />
+    <None Include="NightmareMode.csproj.user" />
   </ItemGroup>
 
   <ItemGroup>
